--- a/client/src/main/resources/utc/pokerut/client/views/createUser.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/createUser.fxml
@@ -3,15 +3,16 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.layout.HBox?>
-<HBox  xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.CreateUserController">
-    <fx:include source="leftPanel.fxml"/>
+<HBox xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="utc.pokerut.client.ihmmain.controllers.CreateUserController">
+    <fx:include source="leftPanel.fxml" />
     <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="40.0" minWidth="10.0" prefWidth="10.0" />
@@ -20,7 +21,7 @@
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="350.0" minHeight="350.0" prefHeight="350.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="400.0" minHeight="400.0" prefHeight="400.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
         </rowConstraints>
         <children>
@@ -38,23 +39,24 @@
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               <RowConstraints minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
                 </rowConstraints>
                 <children>
                     <TextField fx:id="name" prefHeight="25.0" prefWidth="368.0" GridPane.columnIndex="1" />
                     <TextField fx:id="surname" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                     <DatePicker fx:id="birthdate" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                     <TextField fx:id="pseudo" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                    <TextField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                    <TextField fx:id="passwordVerification" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                    <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                    <PasswordField fx:id="passwordVerification" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                     <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                         <children>
                             <Button layoutY="13.0" mnemonicParsing="false" onAction="#AddAvatar" prefHeight="25.0" prefWidth="155.0" text="Importer un avatar (.png)" />
-                            <Button layoutX="175.0" layoutY="13.0" onAction="#AddBaseAvatar" mnemonicParsing="false" prefHeight="25.0" prefWidth="122.0" text="Avatar par défaut" />
+                            <Button layoutX="175.0" layoutY="13.0" mnemonicParsing="false" onAction="#AddBaseAvatar" prefHeight="25.0" prefWidth="122.0" text="Avatar par défaut" />
                         </children>
                     </Pane>
                     <Pane prefHeight="200.0" prefWidth="200.0">
                         <children>
-                            <Label layoutX="158.0" layoutY="17.0" prefHeight="17.0"  text="Nom :" textAlignment="RIGHT" />
+                            <Label layoutX="158.0" layoutY="17.0" prefHeight="17.0" text="Nom :" textAlignment="RIGHT" />
                         </children>
                     </Pane>
                     <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
@@ -87,13 +89,22 @@
                             <Label layoutX="110.0" layoutY="17.0" prefHeight="17.0" prefWidth="83.0" text="Choisir avatar :" />
                         </children>
                     </Pane>
+               <Pane prefHeight="32.0" prefWidth="74.0" GridPane.rowIndex="7">
+                  <children>
+                     <Label layoutX="114.0" prefHeight="17.0" prefWidth="83.0" text="Fichier choisi :" />
+                  </children>
+               </Pane>
+               <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+                  <children>
+                          <Label fx:id="avatarState" prefHeight="17.0" prefWidth="297.0" text="" />
+                  </children>
+               </Pane>
                 </children>
             </GridPane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                 <children>
                     <Button layoutY="13.0" mnemonicParsing="false" onAction="#CreatedProfile" text="Créer le profil" />
-                    <Button layoutX="427.0" layoutY="13.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Retour" onAction="#goBack" />
-                    <Label fx:id="profileState" text="" layoutX="114.0" layoutY="17.0" prefHeight="17.0" prefWidth="297.0" />
+                    <Button layoutX="427.0" layoutY="13.0" mnemonicParsing="false" onAction="#goBack" prefHeight="25.0" prefWidth="94.0" text="Retour" />
                 </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
