--- a/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
+++ b/client/src/main/resources/utc/pokerut/client/views/mainWindow.fxml
@@ -35,6 +35,7 @@
         </StackPane>
     </center>
     <left>
-        <fx:include fx:id="leftPanel" source="leftPanel.fxml"></fx:include>
+        <fx:include fx:id="leftPanel" source="leftPanel.fxml" visible="${controller.leftPanel}"></fx:include>
+        <fx:include fx:id="chatPartie" source="chatPartie.fxml" visible="${controller.chatPartie}"></fx:include>
     </left>
 </BorderPane>
